# drone_race

./: .gitignore  install.md  readme.md  vins_mono_patch.diff
Launch/: scorer.launch  setup.sh
ap_irmarkers/: CMakeLists.txt  package.xml  readme.md
ap_irmarkers/src/: MarkersEstimator.py  irmarkers_node.py
cascaded_pid_control/: CMakeLists.txt  README.md  package.xml
cascaded_pid_control/cfg/: CascadedPid.cfg
cascaded_pid_control/launch/: cascaded_pid_control_gt.launch  flightgoggles_core.launch  spline_planner.launch
cascaded_pid_control/scripts/: cheat_gate_locations_node.py  set_point.py
cascaded_pid_control/src/: cascaded_pid_control_node.cpp  cascaded_pid_control_node.hpp  cheat_node.cpp  cheat_odometry_node.cpp
drone_map_builder/: CMakeLists.txt  package.xml  readme.md
drone_map_builder/configs/: default.rviz  solution.rviz  test_track_gates.json
drone_map_builder/launch/: publish_ground_truth_gates.launch
drone_map_builder/msg/: Gate.msg  GateMap.msg
drone_map_builder/src/: gt_ego_position.py  gt_gates_publisher_node.py  observed_gates_map_node.py
drone_race_common/: CMakeLists.txt  package.xml
drone_race_common/configs/: solution.rviz  solution_flightgoggles.rviz  solution_flightgoggles2.rviz
drone_race_common/launch/: rotors_rviz_spline_gt.launch  solution.launch  spline_rviz_gt.launch
gate_est/: CMakeLists.txt  package.xml
gate_est/src/: ba.hpp  base_node.hpp  common.hpp  depth_estimator.hpp  frame.hpp  gate_est_node.cpp  gate_est_node.hpp
gazebo_assets_drone_race/: .gitignore  CMakeLists.txt  gazebo_assets_setup.sh  launch_rotors.bash  package.xml  readme.md  run_gazebo_world.sh
gazebo_assets_drone_race/launch/: rotors_msf_test_track.launch  test_rotors_joy.launch  test_rotors_msf_camera.launch  test_rotors_waypoint.launch  test_track.launch
gazebo_assets_drone_race/urdf/: firefly_with_vi_sensor.gazebo
launch/: solution.launch
odometry/: CMakeLists.txt  README.md  package.xml
odometry/config/: robot_localization.yaml
simple_vo/: CMakeLists.txt  package.xml
spline_planner/: CMakeLists.txt  README.md  package.xml  setup.py
spline_planner/cfg/: Planner.cfg
spline_planner/config/: test_course.yaml
spline_planner/include/Eigen/Spline/: SplineFitting.h
spline_planner/launch/: planner_new.launch
spline_planner/scripts/: LowPassFilter.py  SmoothedPath.py  planner.py  planner_new.py  planner_test.py  ros_geometry.py  spline.py  spline_planner_2.py  test.py  test_eigen_spline.py  trajectory_visualizer.py
spline_planner/src/: SmoothedPath.py  eigen_spline.cpp  eigen_spline.hpp  plan_velocities.py  ros_geometry.py  spline_planner.py  spline_planner_2.py  trajectory_visualizer.py
waypoint_controller/: CMakeLists.txt  package.xml  readme.md
(+43 files in other folders)
