<?xml version="1.0"?>
<package>
  <name>spline_planner</name>

  <version>0.0.0</version>
  <description>Spline-based planner for AlphaPilot</description>
  <maintainer email="lavigne.eric@gmail.com">Eric Lavigne</maintainer>
  <author>Eric Lavigne</author>
  <license>TODO</license>
  <url type="website">https://github.com/Veilkrand/drone_race</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
</package>

